force-app/main/default/objects/OccupationLamas__c/fields/OccupationIscoId__c.field-meta.xml
<CustomField>
    <fullName>OccupationIscoId__c</fullName>
    <label>קוד ISCO</label>
    <length>4</length>
    <type>Text</type>
</CustomField>