force-app/main/default/objects/OccupationLamas__c/fields/OccupationLamasRetrainId__c.field-meta.xml
<CustomField>
    <fullName>OccupationLamasRetrainId__c</fullName>
    <label>קוד Retrain</label>
    <length>30</length>
    <type>Text</type>
</CustomField>