force-app/main/default/objects/OccupationLamas__c/fields/OccupationLamasTags__c.field-meta.xml
<CustomField>
    <fullName>OccupationLamasTags__c</fullName>
    <label>תגיות</label>
    <length>255</length>
    <type>Text</type>
</CustomField>