force-app/main/default/objects/OccupationLamas__c/fields/OccupationMaleName__c.field-meta.xml
<CustomField>
    <fullName>OccupationMaleName__c</fullName>
    <label>שם עיסוק לשון זכר</label>
    <length>100</length>
    <type>Text</type>
</CustomField>