force-app/main/default/objects/OccupationLamas__c/fields/OccupationSFLamasId__c.field-meta.xml
<CustomField>
    <fullName>OccupationSFLamasId__c</fullName>
    <displayFormat>OL-{00000000}</displayFormat>
    <label>מספר מזהה</label>
    <type>AutoNumber</type>
</CustomField>