force-app/main/default/objects/OccupationLamas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OccupationLamasNameId__c</columns>
    <columns>OccupationIdMatrix__c</columns>
    <columns>OccupationIscoId__c</columns>
    <columns>OccupationLamasRetrainId__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>